[gd_scene load_steps=4 format=3 uid="uid://djyqnndv57eo1"]

[ext_resource type="PackedScene" uid="uid://beguuue73mcmk" path="res://Objects/car.tscn" id="1_5637j"]
[ext_resource type="Script" path="res://Objects/road.gd" id="1_kgcql"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6eijy"]
size = Vector3(1, 2, 1)

[node name="Road" type="Node3D"]
script = ExtResource("1_kgcql")
carScene = ExtResource("1_5637j")

[node name="RoadMesh" type="CSGBox3D" parent="."]
size = Vector3(15, 0.2, 1)

[node name="CarSpawningPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.2, 0)

[node name="CarRemovalArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CarRemovalArea"]
transform = Transform3D(0.999924, 0.0123043, 0, -0.0123043, 0.999924, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_6eijy")

[node name="CarSpawningTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="CarRemovalArea" to="." method="carRemovalAreaEntered"]
[connection signal="timeout" from="CarSpawningTimer" to="." method="carSpawningTimerEnded"]
